Fix word wrap in comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -501,3 +501,7 @@ span > label > input[type="radio"]{
     line-height: 150px;
     font-weight: 700;
 }
+
+.break-word {
+    word-wrap: break-word;
+}
